# cirroz

./: .gitignore  LICENSE  README.md
hardware/: PCB1.PcbDoc  PCB_Project1.PrjPCB  Sheet1.SchDoc  Sheet10.SchDoc  Sheet11.SchDoc  Sheet2.SchDoc  Sheet3.SchDoc  Sheet4.SchDoc  Sheet5.SchDoc  Sheet6.SchDoc  Sheet7.SchDoc  Sheet8.SchDoc  Sheet9.SchDoc
hardware/gerber/: info.txt  pcb1.drl  pcb1.g1  pcb1.g2  pcb1.gbl  pcb1.gbo  pcb1.gbs  pcb1.gm2  pcb1.gtl  pcb1.gto  pcb1.gts  pcb1.rpt
hardware/lib/: ADV7123.IntLib  CS4271.IntLib  Cirrus.IntLib  IntelP30.IntLib  MiscDev.IntLib  connectors.IntLib  realtek_phy.IntLib
software/bare_tools/: CMakeLists.txt  startup.lds  startup.s
software/bare_tools/host/: load.py  uart_boot.c
software/bare_tools/include/: clocks.h  hwdefs.h  memorymap-9307a.h  memorymap.h
software/bare_tools/ledtest/: asm.s79  main2.c
software/bare_tools/sdramtest/: asm.s79  main2.c
software/bare_tools/uartboot/: asm.s79  main2.c
software/buildroot/: buildroot_config  sip_pyqt.diff
software/linux/kernel/: cirroz.c  linux-3.11-config  linux-3.11-ep93xx-dma.patch
software/u-boot/: uboot-ep93xx.patch
